# cpp-project-template

./: README.md
src/: CMakeLists.txt  MyApp.cpp  MyApp.h  log4cxx.properties  logging.h  main.cpp
